# asteroid

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn_conf.py  initial.sh  manage.py  pyproject.toml  pytest.ini
api/: exceptions.py  urls.py  utils.py  views.py
api/serializers/: __init__.py  core_serializers.py  customauth_serializers.py
api/swagger/: params.py
asteroid/: settings.py  urls.py  wsgi.py
core/: admin.py  core_functions.py  models.py
core/migrations/: 0001_initial.py  0002_auto_20200820_1644.py
customauth/: admin.py  customauth_functions.py  models.py
customauth/fixtures/: test_accounts.json
customauth/migrations/: 0001_initial.py
nasa/: api.py  exceptions.py
nasa/management/commands/: loadnasa.py
tests/: conftest.py
tests/api/: test_views.py
tests/core/: test_functions.py
tests/nasa/: utils.py
tests/nasa/api/: test_api.py
tests/nasa/data/: mock_response_200_ok.json
tests/nasa/management/: test_loadnasa.py
